--- a/ProyectoGamerzPlanet/src/main/resources/application.properties
+++ b/ProyectoGamerzPlanet/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#En * nix
 
+
+#En windows
+upload.path=C:/Users/ester/Pictures
+
+spring.servlet.multipart.max-file-size=10M
+spring.servlet.multipart.max-request-size=10M
+
+spring.h2.console.enable=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:h2:mem:juegosdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
