--- a/GamerzPlanet/pom.xml
+++ b/GamerzPlanet/pom.xml
@@ -5,27 +5,23 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.1.RELEASE</version>
+		<version>2.3.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>net.eegg</groupId>
-	<artifactId>ProyectoGamerzPlanet</artifactId>
+	<groupId>net.gecc</groupId>
+	<artifactId>GamerzPlanet</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ProyectoGamerzPlanet</name>
-	<description>Demo project for Spring Boot with Thymeleaf</description>
+	<name>GamerzPlanet</name>
+<description>Demo project for Spring Boot with Thymeleaf</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -52,6 +48,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -74,3 +75,4 @@
 	</build>
 
 </project>
+	
